--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-    <title>星愿荟</title>
+    <title>星</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but 星愿荟 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
